	  can driver.
	* arch/arm/src/lm3s: Add support for the LM3S6432S2E (Contributed by Mike Smith)
	* configs/lm3s6432-s2:  Add support for the TI RDK-S2E (LM3S6432S2E) board
	  (Contributed by Mike Smith)
	* configs/stm3240g-eval/src: Add APIs support to support user access to the
	  LEDs
	* arch/arm/src/lpc17xx/lpc17_can.c: Add logic to change the CAN bit rate based
	  on the NuttX configuration.
	* arch/arm/src/lpc17xx/lpc17_can.c: PCLK divisor is now a configuration
	  option.
	* arch/arm/src/stm32/stm32_serial.c and stm32_lowputc.c:  Support for
	  UART4-5 and USART6 added by Mike Smith.  Also includes a more flexible
	  way of managing UART pin configurations.
	* include/nuttx/pwm.h, drivers/pwm.c, arch/arm/src/stm32/stm32_pwm.c:  Add
	  support for pulse count in order to better support stepper motors.
	* arch/arm/src/stm32/stm32_dumpgpio.c: Checking wrong register to see if
	  GPIO is enabled.  Also not adding the GPIO base address to several offsets.
	* configs/stm32f4discovery:  Port to the STMicro STM32F4Discovery board
	  (Contributed by Mike Smith).
	* fs/fat/fs_fat32util.c:  On a failure to recognize a FAT file system, the
	  mount logic should return -EINVAL, not -ENODEV.
	* arch/arm/src/stm32/stm32_tim.c:  Support for STM32 F4 32-bit timers
	  (Contributed by Mikhail Bychek)
	* lib/stdio/lib_vsprintf.c:  Add support for fixed-size fields with floating
	  point numbers (Contributed by Mikhail Bychek)

6.15 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/stm32/stm32_pwm.c:  Pulse count was limited to 128; now is
	  (essentially) unlimited.
	* configs/stm3240g-eval/include/board.h:  Input frequences wrong for all but
	  one APB2 timer.
	* arch/mips/src/pic32mx/pic32mx-ethernet.c:  The PIC32 Ethernet driver is
	  code complete, but still untested.
	* confgs/sim/*/Make.defs and arch/sim/src/Makefile:  Add support for building
	  a 32-bit executable on a 64-bit Linux target.